<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount"
    android:id="@+id/CreateAccount"
    >

    <TextView
        android:id="@+id/harvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Harvest"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#c36c04"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cultivate crops in your pocket"
        android:textAlignment="center"
        android:textColor="#434a53"/>

    <EditText
        android:id="@+id/fullname"
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/createaccount"
        android:text="Create Account"
        android:backgroundTint="#c36c04"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="26sp"
        android:textStyle="bold"/>
</LinearLayout>