<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateLogEntry"
    android:orientation="vertical"
    android:id="@+id/createLogentry">

    <TextView
        android:id="@+id/createInstruction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="Add new log entry"
        android:textAlignment="center"
        android:textColor="#434a53"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/produceET"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Produce type"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#FFEEDA"
        android:padding="4dp"
        android:scrollbars="vertical" />
    <EditText
        android:id="@+id/weightET"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="Weight (g)"
        android:inputType="number"
        android:textSize="24sp" />


    <Button
        android:id="@+id/addLogEntry"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#c36c04"
        android:text="Add"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/goToLogEntries"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:tooltipText="Log entries"
            android:src="@drawable/ic_entries" />

        <ImageView
            android:id="@+id/returnHome"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:tooltipText="Home"
            android:src="@drawable/ic_baseline_home_24" />
    </LinearLayout>


</LinearLayout>