<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:id="@+id/FOrgotPassword">


    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/resetPassword"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#c36c04"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="Reset Password"
        android:textSize="26sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/returnHome"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#daab65"
        android:text="Return to home"
        android:textSize="26sp"
        android:textStyle="bold" />

</LinearLayout>