<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity"
    android:id="@+id/mainActivity"
    >

    <TextView
        android:id="@+id/harvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Harvest"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#c36c04"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cultivate crops in your pocket"
        android:textAlignment="center"
        android:textColor="#434a53"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Password"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/login"
        android:backgroundTint="#c36c04"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="Login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Forgot password?"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Register"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>