<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateLog"
    android:orientation="vertical"
    android:id="@+id/createLog">

    <TextView
        android:id="@+id/createInstruction"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:text="Please enter the name of your new log below!"
        android:textAlignment="center"
        android:textColor="#434a53"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/logName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="Log Name"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/addLog1"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:backgroundTint="#c36c04"
        android:text="Add"
        android:textSize="26sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/returnHome"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:backgroundTint="#daab65"
        android:text="Return to home"
        android:textSize="26sp"
        android:textStyle="bold" />

</LinearLayout>