...
        android:textStyle="bold"
        android:textColor="#434a53"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#FFEEDA"
        android:padding="4dp"
        android:scrollbars="vertical" />

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/addLog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:tooltipText="Add new log"
            android:src="@drawable/ic_add" />
...
